--- a/index.html
+++ b/index.html
@@ -3,9 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
 </head>
 <body>
-    <h1>Cześć</h1>  
-</body>
+    <header>
+        <nav>
+            <a href="/">WebStudio</a>
+            <menu>
+                <ul>
+                <li><a href="/">Studio</a></li>
+                <li><a href="/">Portfolio</a></li>
+                <li><a href="/">Contacts</a></li>
+            </ul>
+            </menu>
+        </nav>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+    </header>
+    <main>
+    <section>
+        <h1>Effective Solutions<br/>
+            for Your Business</h1>
+            <button type="button">Order Service</button>
+    </section>
+    <section>
+        <h2>Our Values</h2>
+        <ul>
+            <li><h3>Strategy</h3>
+                <p>Our goal is to identify the business
+                    problem to walk away with the perfect and creative solution.</p>
+            </li>
+            <li><h3>Punctuality</h3>
+                <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+            </li>
+            <li><h3>Diligence</h3>
+                <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+            </li>
+            <li><h3>Technologies</h3>
+                <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2>What are we doing</h2>
+        <ul>
+        <li><img src="images/img1.jpg" alt="picture" width="360" height="300"></li>
+        <li><img src="images/img2.jpg" alt="picture" width="360" height="300"></li>
+        <li><img src="images/img3.jpg" alt="picture" width="360" height="300"></li>
+    </ul>
+    </section>
+    <section>
+        <h2>Our Team</h2>
+        <figure>
+        <img src="images/portret.jpg" alt="picture" width="264" height="260">
+        <figcaption>
+            <h4>Mark Guerrero</h4>
+            <p>Product Designer</p>
+        </figcaption>
+        </figure>
+        <figure>
+        <img src="images/portret2.jpg" alt="picture" width="264" height="260">
+        <figcaption>
+            <h4>Tom Ford</h4>
+            <p>Frontend Developer</p>
+        </figcaption>
+        </figure>
+        <figure>
+        <img src="images/portret3.jpg" alt="picture" width="264" height="260">
+        <figcaption>
+            <h4>Camila Garcia</h4>
+            <p>Marketing</p>
+        </figcaption>
+        </figure>
+        <figure>
+        <img src="images/portret4.jpg" alt="picture" width="264" height="260">
+        <figcaption>
+            <h4>Daniel Wilson</h4>
+            <p>UI Designer</p>
+        </figcaption>
+    </figure>
+    </section>
+</main>
+<footer>
+    <a href="/">WebStudio</a>
+   <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+</footer>
+</body> 
 </html>
